--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,10 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-*.env
+# Environment Files
+.env
+
+# Dependency directories
 node_modules
 dist
 dist-ssr
