--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.9",
+    "@hookform/resolvers": "^3.9.1",
     "@react-email/components": "^0.0.28",
     "@react-email/render": "^1.0.2",
     "axios": "^1.7.9",
@@ -25,7 +26,8 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-scroll": "^1.9.0",
-    "resend": "^4.0.1"
+    "resend": "^4.0.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
