--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@react-email/components": "^0.0.28",
     "@react-email/render": "^1.0.2",
+    "@vercel/analytics": "^1.4.1",
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
